2017-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp:
	  Make source compilable with MSVC++ 2015.

2017-10-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: fix bug #2662 (omit debug info on dry run)

2017-10-02 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/cvu_play_music.c,
	  support/regression/tests/io.c:
	  Improve coverage of z80 peephole rules.
	* src/SDCCicode.c:
	  Improve debug info for ENDFUNCTION iCode, patch by Åke Rehnman.
	* src/z80/peeph-tlcs90.def:
	  Remove obsolete tlcs90 peephole rules.
	* src/z80/peeph-gbz80.def:
	  Remove obsolete gbz80 peephole rules.

2017-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr80501.c,
	  support/regression/tests/gcc-torture-execute-pr81555.c:
	  Disable tests for older host compilers.
	* src/z80/peep.c,
	  support/regression/tests/bug-2569.c:
	  Fix bug #2569.
	* src/SDCCralloc.hpp:
	  Change filenames for graphs from register allocation for --dump-graphs.
	* support/regression/tests/gcc-torture-execute-20141125-1.c:
	  Disable new test since it fails on 32-bit hosts, bug #2661.

2017-09-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix issues in built-in memset() and handling of literals.
	* src/z80/gen.c:
	  Improve long long parameter passing.

2017-09-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/addsub.c:
	  Optimize addition.

2017-09-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  support/regression/tests/p99-conformance.c,
	  doc/sdccman.lyx:
	  Implement RFE #537: static in array parameters.

2017-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr7*.c
	  support/regression/tests/gcc-torture-execute-pr8*.c:
	  Port more tests from the GCC testsuite.
	* support/regression/tests/gcc-torture-execute-930529-1.c: